[package]
name = "amandine"
version = "0.1.2"
edition = "2021"
authors = ["Ruta Tang <rutatangpersonal@gmail.com"]
license = "MIT"
description = "A tiny json database for Rust"
homepage = "https://github.com/RutaTang/amandine"
repository = "https://github.com/RutaTang/amandine"
keywords = ["json", "database", "embedded", "nosql", "key-value"]
categories = ["development-tools","database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
